Fix: Mobile: Fix text overflow

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -30,6 +30,12 @@
   height: 70%;
 }
 
+@media (--mobile) {
+  .imagecontainer {
+    height: auto;  # TODO: Use constant height
+  }
+}
+
 .link {
   height: 20px;
   color: #000;
